# Talking-Face-Landmarks-from-Speech

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build_dataset.py  dataset.py  environment.yml  export_unity_model.py  featureExtractor.py  generate.py  generate_pytorch.py  overlay_face.py  pyproject.toml  requirements.txt  scrape_grid_dataset.py  test_build_dataset.py  test_dataset.py  train.py  train_pytorch.py  utils.py
src/: generate.py  train.py  utils.py
src/talking_face/: build_dataset.py  export_model.py  generate.py  overlay_face.py  scrape_grid_dataset.py  train.py  utils.py
tests/: test_build_dataset.py  test_dataset.py
