[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talking_face"
version = "0.1.0"
authors = [
  { name="Alex Service", email="alex@predictwith.us" },
]
description = "A package for training and inferring face landmarks from audio"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/audiovtuber/Talking-Face-Landmarks-from-Speech"
